# chemp

./: Cargo.toml  readme.md
src/: error.rs  lib.rs  parser.rs  tokenizer.rs
src/chemistry/: chemical_element.rs  element.rs  mod.rs  table.rs
src/compounds/: component.rs  compound.rs  mod.rs
src/tokens/: component.rs  element.rs  group.rs  hydrate.rs  mod.rs  substance.rs  symbol.rs
