[package]
name = "chemp"
version = "0.9.2"
edition = "2021"
description = "chemical formulas parser"
license = "MIT OR Apache-2.0"
readme = "readme.md"
homepage = "https://github.com/smrnwow/chemp"
repository = "https://github.com/smrnwow/chemp"
documentation = "https://github.com/smrnwow/chemp"

[dependencies]
once_cell = "1.19.0"
